Fix info content text color background contrast

--- a/style/style.css
+++ b/style/style.css
@@ -132,7 +132,7 @@ button {
 
 .info-content-text {
     text-align: center;
-    color: #E5E7EB;
+    color: #4B4C4A;
 }
 
 .footer {
